# forge

./: .gitignore  .mcp.json  CLAUDE.md  Directory.Build.props  Forge.sln  README.md  TASK_LOG.md  build.cmd  pyproject.toml  run.py  run.pyw
dev-support/hwp-api-mcp/: package-lock.json  package.json
dev-support/hwp-api-mcp/src/: index.ts
dev-support/tool2-spec-mcp/: package-lock.json  package.json
dev-support/tool2-spec-mcp/scripts/: extract_to_sql.py  schema.sql  smoke_test.py
dev-support/tool2-spec-mcp/src/: index.ts
forge/: __init__.py  com_helpers.py  diagnose.py  hwp_session.py  user_settings.py
forge/formatter/: __init__.py  hwpx_writer.py  parser.py  templates.py
forge/linter/: __init__.py  _range.py  indent_align.py  squeeze.py
forge/renderers/: __init__.py  annotation.py  attachment.py  base.py  bullet.py  conclusion.py  metadata.py  note_callout.py  primitives.py  section.py  subsection.py  table.py
forge/stage_1_formatter/: __init__.py  hwpx_writer.py  parser.py  templates.py
forge/stage_2_linter/: _range.py  indent_align.py  kerning.py
forge/templates/: __init__.py  fss_tool2.py
forge/ui/: __init__.py  actions.py  app.py  hotkeys.py  hwp_picker.py  scrolled.py
forge/ui/tabs/: __init__.py  howto_tab.py  markdown_tab.py  realtime_tab.py  settings_tab.py  templates_tab.py
scripts/: BUILD.md  build.ps1  diag_attach_verbose.py  diag_rot.py  diagnose_table_width.py  extract-hwp-api.py  font_battery.py  font_probe.py  hwp_api_schema.sql  hwp_console.py  parse_hwp_api.py  smoke_test_hwp_mcp.py
spec/: markdown-spec.md  renderer-spec.md  table-renderer-plan.md
src/Forge.Core/: ComHelpers.cs  ComLateBind.cs  Forge.Core.csproj  Glossary.cs  HwpSession.cs  Rgb.cs  TypelibDispatch.cs  UserSettings.cs
src/Forge.Core/Formatter/: HwpxWriter.cs  MarkdownDocument.cs  Metadata.cs  Node.cs  Parser.cs
src/Forge.Core/Linter/: GlossaryExpand.cs  IndentAlign.cs  Kerning.cs  Range.cs  Squeeze.cs
src/Forge.Probe/: Forge.Probe.csproj  Program.cs
src/Forge.UI/: AppState.cs  Forge.UI.csproj  ForgeIcon.cs  ForgeTheme.cs  Form1.Designer.cs  Form1.cs  HwpPickerForm.cs  MainForm.cs  Program.cs
src/Forge.Win32/: Forge.Win32.csproj  GlobalHotkeyManager.cs  ImeHelper.cs  KeyState.cs  NativeMethods.cs
tests/Forge.Core.Tests/: Forge.Core.Tests.csproj  ParserTests.cs
tests/samples/: w2_smoke.md
ui/: __init__.py  app.py  hotkeys.py  icon.py  tooltip.py
ui/tabs/: markdown_tab.py  realtime_tab.py  settings_tab.py
(+26 files in other folders)
