[project]
name = "sentinel-forge"
version = "0.1.0"
description = "개조식 markdown → HWPX 변환 + 한/글 활성 문서 정형조작 (LLM-free HWP 툴킷)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    { name = "Sentinel-Forge" }
]

dependencies = [
    # GUI
    "ttkbootstrap>=1.10.0",
    # HWPX (ZIP+XML) — STAGE 1·2
    "lxml>=5.0",
    "pyyaml>=6.0",
    # HWP COM — STAGE 3 + 활성 프로세스 attach
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sentinel-forge = "ui.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge*", "ui*"]
exclude = ["tests*", "scripts*", "reference*", "dev-support*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
