[project]
name = "sentinel-forge"
# ★ 버전 단일 진실원본은 forge/__init__.py 의 __version__.
# 여기서는 dynamic 으로 그 값을 가져옴 — 두 곳에서 갱신할 필요 없음.
dynamic = ["version"]
description = "개조식 markdown → HWPX 변환 + 한/글 활성 문서 정형조작 (LLM-free HWP 툴킷)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    { name = "kinphw" }
]

dependencies = [
    # GUI: stdlib tkinter/ttk (의존성 없음)
    # md front-matter
    "pyyaml>=6.0",
    # HWP COM — 모든 STAGE + 활성 프로세스 attach
    "pywin32>=306; sys_platform == 'win32'",
    # 한/글 프로세스 감지 (attach 정책)
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sentinel-forge = "forge.ui.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "forge.__version__"}

[tool.setuptools.packages.find]
include = ["forge*"]
exclude = ["tests*", "scripts*", "reference*", "dev-support*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
